--- a/public/css/carouselproduk.css
+++ b/public/css/carouselproduk.css
@@ -1,124 +1,105 @@
 .mySwiper {
-    padding: 4px;
+    --swiper-pagination-color: #1a2a42;
+    --swiper-pagination-bullet-horizontal-gap: 6px;
 }
 
 .swiper-slide {
-    background: white;
-    width: 100%;
-    box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.15);
-    height: 90%;
-    padding: 12px;
+    margin: 8px;
+    background-color: rgb(255, 255, 255);
     border-radius: 10px;
-    margin-left: 4px;
+    padding: 8px;
+    box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.15);
+    margin-bottom: 40px;
+    cursor: pointer;
 }
 
 .swiper-slide img {
-    background-color: rgb(239, 239, 239);
-    width: 100%;
+    background-color: rgb(233, 233, 233);
     border-radius: 10px;
-    height: 100%;
-    object-fit: cover;
 }
 
-.swiper-title {
+.swiper-tittle {
+    margin-top: 8px;
     display: flex;
-    width: 100%;
     justify-content: space-between;
     align-items: center;
-    margin-top: 12px;
 }
 
-.swiper-title p {
-    margin-left: 12px;
-    font-size: 24px;
+.swiper-tittle span {
     color: #1a2a42;
     font-family: Caveat Brush;
+    font-size: 20px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
 }
 
-.swiper-slide iconify-icon {
-    color: #bdbdbd;
-}
-.swiper-detail-and-price {
-    display: block;
-    margin-left: 12px;
+.swiper-tittle button {
+    color: gray;
 }
 
-.swiper-detail-and-price p {
-    margin-bottom: 20px;
+.swiper-detail p {
     color: #bdbdbd;
     font-family: Fredoka;
-    font-size: 12px;
+    font-size: 8px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
 }
 
-.swiper-detail-and-price span {
+.swiper-detail span {
     color: #1a2a42;
     font-family: Fredoka;
-    font-size: 16px;
+    font-size: 12px;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
 }
 
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (min-width: 640px) {
+@media screen and (min-width: 640px) {
     .swiper-slide {
-        background: white;
-        width: 100%;
-        box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.15);
-        margin-bottom: 20px;
+        margin: 8px;
+        background-color: rgb(255, 255, 255);
+        border-radius: 10px;
         padding: 12px;
-        border-radius: 20px;
-        margin-left: 4px;
+        box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.15);
+        margin-bottom: 40px;
     }
-
     .swiper-slide img {
-        background-color: rgb(239, 239, 239);
-        width: 100%;
-        border-radius: 20px;
-        height: 100%;
+        background-color: rgb(233, 233, 233);
+        border-radius: 10px;
     }
 
-    .swiper-title {
+    .swiper-tittle {
+        margin-top: 12px;
         display: flex;
-        width: 100%;
         justify-content: space-between;
         align-items: center;
-        margin-top: 8px;
     }
 
-    .swiper-title p {
-        font-size: 32px;
+    .swiper-tittle span {
         color: #1a2a42;
         font-family: Caveat Brush;
+        font-size: 28px;
         font-style: normal;
         font-weight: 400;
         line-height: normal;
     }
 
-    .swiper-slide iconify-icon {
-        color: #bdbdbd;
-    }
-    .swiper-detail-and-price {
-        display: block;
+    .swiper-tittle button {
+        color: gray;
     }
 
-    .swiper-detail-and-price p {
-        margin-bottom: 20px;
+    .swiper-detail p {
         color: #bdbdbd;
         font-family: Fredoka;
-        font-size: 14px;
+        font-size: 12px;
         font-style: normal;
         font-weight: 400;
         line-height: normal;
     }
 
-    .swiper-detail-and-price span {
+    .swiper-detail span {
         color: #1a2a42;
         font-family: Fredoka;
         font-size: 16px;
@@ -127,74 +108,3 @@
         line-height: normal;
     }
 }
-
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 768px) {
-    .swiper-slide {
-        background: white;
-        width: 200px;
-        box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.15);
-        margin-bottom: 20px;
-        padding: 12px;
-        border-radius: 20px;
-        margin-left: 4px;
-    }
-
-    .swiper-slide img {
-        background-color: rgb(239, 239, 239);
-        width: 100%;
-        border-radius: 20px;
-        height: 80%;
-    }
-
-    .swiper-title {
-        display: flex;
-        width: 100%;
-        justify-content: space-between;
-        align-items: center;
-        margin-top: 8px;
-    }
-
-    .swiper-title p {
-        font-size: 32px;
-        color: #1a2a42;
-        font-family: Caveat Brush;
-        font-style: normal;
-        font-weight: 400;
-        line-height: normal;
-    }
-
-    .swiper-slide iconify-icon {
-        color: #bdbdbd;
-    }
-    .swiper-detail-and-price {
-        display: block;
-    }
-
-    .swiper-detail-and-price p {
-        margin-bottom: 20px;
-        color: #bdbdbd;
-        font-family: Fredoka;
-        font-size: 14px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: normal;
-    }
-
-    .swiper-detail-and-price span {
-        color: #1a2a42;
-        font-family: Fredoka;
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 500;
-        line-height: normal;
-    }
-}
-
-/* Medium devices (landscape tablets, 768px and up) */
-/* @media only screen and (min-width: 1024px) {
-} */
-
-/* Large devices (laptops/desktops, 992px and up) */
-/* @media only screen and (min-width: 1280px) {
-} */
