--- a/public/css/carouselproduk.css
+++ b/public/css/carouselproduk.css
@@ -16,6 +16,7 @@
 .swiper-slide img {
     background-color: rgb(233, 233, 233);
     border-radius: 10px;
+    object-fit: cover;
 }
 
 .swiper-tittle {
